Create SCA 1.0 branch
git-svn-id: https://svn.apache.org/repos/asf/incubator/tuscany/branches/sca-java-1.0@575631 13f79535-47bb-0310-9956-ffa450edef68