@@ -24,28 +24,43 @@ import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URL;
 import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
 import java.util.Map;
+import java.util.Set;
+import java.util.concurrent.CopyOnWriteArrayList;
 
 import javax.xml.namespace.QName;
 
-import org.apache.tuscany.contribution.Contribution;
-import org.apache.tuscany.contribution.DeployedArtifact;
 import org.apache.tuscany.sca.assembly.AssemblyFactory;
 import org.apache.tuscany.sca.assembly.Component;
 import org.apache.tuscany.sca.assembly.ComponentService;
 import org.apache.tuscany.sca.assembly.Composite;
 import org.apache.tuscany.sca.assembly.CompositeService;
 import org.apache.tuscany.sca.assembly.SCABinding;
-import org.apache.tuscany.sca.contribution.resolver.DefaultModelResolver;
+import org.apache.tuscany.sca.assembly.SCABindingFactory;
+import org.apache.tuscany.sca.assembly.builder.CompositeBuilder;
+import org.apache.tuscany.sca.assembly.builder.CompositeBuilderException;
+import org.apache.tuscany.sca.assembly.xml.Constants;
+import org.apache.tuscany.sca.contribution.Contribution;
+import org.apache.tuscany.sca.contribution.DeployedArtifact;
+import org.apache.tuscany.sca.contribution.ModelFactoryExtensionPoint;
 import org.apache.tuscany.sca.contribution.service.ContributionException;
 import org.apache.tuscany.sca.contribution.service.ContributionService;
 import org.apache.tuscany.sca.contribution.service.util.FileHelper;
-import org.apache.tuscany.sca.core.runtime.ActivationException;
-import org.apache.tuscany.sca.core.runtime.CompositeActivator;
+import org.apache.tuscany.sca.core.assembly.ActivationException;
+import org.apache.tuscany.sca.core.assembly.CompositeActivator;
+import org.apache.tuscany.sca.core.assembly.RuntimeComponentImpl;
+import org.apache.tuscany.sca.core.context.ServiceReferenceImpl;
 import org.apache.tuscany.sca.host.embedded.SCADomain;
+import org.apache.tuscany.sca.host.embedded.management.ComponentListener;
+import org.apache.tuscany.sca.host.embedded.management.ComponentManager;
+import org.apache.tuscany.sca.interfacedef.InterfaceContract;
+import org.apache.tuscany.sca.interfacedef.java.JavaInterfaceFactory;
+import org.apache.tuscany.sca.runtime.RuntimeComponent;
+import org.apache.tuscany.sca.runtime.RuntimeComponentContext;
+import org.apache.tuscany.sca.runtime.RuntimeComponentReference;
 import org.osoa.sca.CallableReference;
-import org.osoa.sca.ComponentContext;
-import org.osoa.sca.Constants;
 import org.osoa.sca.ServiceReference;
 import org.osoa.sca.ServiceRuntimeException;
 
@@ -57,12 +72,12 @@ import org.osoa.sca.ServiceRuntimeException;
 public class DefaultSCADomain extends SCADomain {
 
     private String uri;
-    private String location;
     private String[] composites;
     private Composite domainComposite;
     private Contribution contribution;
     private Map<String, Component> components = new HashMap<String, Component>();
     private ReallySmallRuntime runtime;
+    private ComponentManager componentManager;
 
     /**
      * Constructs a new domain facade.
@@ -77,7 +92,6 @@ public class DefaultSCADomain extends SCADomain {
                             String contributionLocation,
                             String... composites) {
         this.uri = domainURI;
-        this.location = contributionLocation;
         this.composites = composites;
 
         // Create and start the runtime
@@ -93,14 +107,21 @@ public class DefaultSCADomain extends SCADomain {
         ContributionService contributionService = runtime.getContributionService();
         URL contributionURL;
         try {
-            contributionURL = getContributionLocation(location, this.composites, applicationClassLoader);
-        } catch (MalformedURLException e) {
+            contributionURL = getContributionLocation(applicationClassLoader, contributionLocation, this.composites);
+            if (contributionURL != null) {
+                // Make sure the URL is correctly encoded (for example, escape the space characters) 
+                contributionURL = contributionURL.toURI().toURL();
+            }
+        } catch (Exception e) {
             throw new ServiceRuntimeException(e);
         }
 
         try {
-            DefaultModelResolver modelResolver = new DefaultModelResolver(applicationClassLoader);
-            contribution = contributionService.contribute(location, contributionURL, modelResolver, false);
+            String contributionURI = FileHelper.getName(contributionURL.getPath());
+            if (contributionURI == null || contributionURI.length() == 0) {
+                contributionURI = contributionURL.toString();
+            }
+            contribution = contributionService.contribute(contributionURI, contributionURL, false);
         } catch (ContributionException e) {
             throw new ServiceRuntimeException(e);
         } catch (IOException e) {
@@ -110,61 +131,128 @@ public class DefaultSCADomain extends SCADomain {
         // Create an in-memory domain level composite
         AssemblyFactory assemblyFactory = runtime.getAssemblyFactory();
         domainComposite = assemblyFactory.createComposite();
-        domainComposite.setName(new QName(Constants.SCA_NS, "domain"));
+        domainComposite.setName(new QName(Constants.SCA10_NS, "domain"));
         domainComposite.setURI(domainURI);
 
-        // Include all specified deployable composites in the SCA domain
-        Map<String, Composite> compositeArtifacts = new HashMap<String, Composite>();
-        for (DeployedArtifact artifact : contribution.getArtifacts()) {
-            if (artifact.getModel() instanceof Composite) {
-                compositeArtifacts.put(artifact.getURI(), (Composite)artifact.getModel());
+        //when the deployable composites were specified when initializing the runtime
+        if (composites != null && composites.length > 0 && composites[0].length() > 0) {
+            // Include all specified deployable composites in the SCA domain
+            Map<String, Composite> compositeArtifacts = new HashMap<String, Composite>();
+            for (DeployedArtifact artifact : contribution.getArtifacts()) {
+                if (artifact.getModel() instanceof Composite) {
+                    compositeArtifacts.put(artifact.getURI(), (Composite)artifact.getModel());
+                }
             }
-        }
-        for (String compositePath : composites) {
-            Composite composite = compositeArtifacts.get(compositePath);
-            if (composite == null) {
-                throw new ServiceRuntimeException("Composite not found: " + compositePath);
+            for (String compositePath : composites) {
+                Composite composite = compositeArtifacts.get(compositePath);
+                if (composite == null) {
+                    throw new ServiceRuntimeException("Composite not found: " + compositePath);
+                }
+                domainComposite.getIncludes().add(composite);
             }
-            domainComposite.getIncludes().add(composite);
+        } else {
+            // in this case, a sca-contribution.xml should have been specified
+            for (Composite composite : contribution.getDeployables()) {
+                domainComposite.getIncludes().add(composite);
+            }
+
         }
 
-        // Activate and start the SCA domain composite
+        // Build the SCA composites
+        CompositeBuilder compositeBuilder = runtime.getCompositeBuilder();
+
+        for (Composite composite : domainComposite.getIncludes()) {
+            try {
+                compositeBuilder.build(composite);
+            } catch (CompositeBuilderException e) {
+                throw new ServiceRuntimeException(e);
+            }
+        }
+
+        // Activate and start composites
         CompositeActivator compositeActivator = runtime.getCompositeActivator();
-        try {
-            compositeActivator.start(domainComposite);
-        } catch (ActivationException e) {
-            throw new ServiceRuntimeException(e);
+        compositeActivator.setDomainComposite(domainComposite);
+        for (Composite composite : domainComposite.getIncludes()) {
+            try {
+                compositeActivator.activate(composite);
+            } catch (ActivationException e) {
+                throw new ServiceRuntimeException(e);
+            }
         }
-
-        // FIXME remove this
-        runtime.startDomainWorkContext(domainComposite);
+        for (Composite composite : domainComposite.getIncludes()) {
+            try {
+                for (Component component : composite.getComponents()) {
+                    compositeActivator.start(component);
+                }
+            } catch (ActivationException e) {
+                throw new ServiceRuntimeException(e);
+            }
+        }
 
         // Index the top level components
-        for (Component component : domainComposite.getComponents()) {
-            components.put(component.getName(), component);
+        for (Composite composite : domainComposite.getIncludes()) {
+            for (Component component : composite.getComponents()) {
+                components.put(component.getName(), component);
+            }
         }
+
+        this.componentManager = new DefaultSCADomainComponentManager(this);
+
+        // For debugging purposes, print the composites
+//        ExtensionPointRegistry extensionPoints = runtime.getExtensionPointRegistry();
+//        StAXArtifactProcessorExtensionPoint artifactProcessors = extensionPoints.getExtensionPoint(StAXArtifactProcessorExtensionPoint.class);
+//        StAXArtifactProcessor processor = artifactProcessors.getProcessor(Composite.class);
+//        for (Composite composite : domainComposite.getIncludes()) {
+//            try {
+//                ByteArrayOutputStream bos = new ByteArrayOutputStream();
+//                XMLOutputFactory outputFactory = XMLOutputFactory.newInstance();
+//                outputFactory.setProperty(XMLOutputFactory.IS_REPAIRING_NAMESPACES, Boolean.TRUE);
+//                processor.write(composite, outputFactory.createXMLStreamWriter(bos));
+//                Document document =
+//                    DocumentBuilderFactory.newInstance().newDocumentBuilder().parse(new ByteArrayInputStream(bos
+//                        .toByteArray()));
+//                OutputFormat format = new OutputFormat();
+//                format.setIndenting(true);
+//                format.setIndent(2);
+//                XMLSerializer serializer = new XMLSerializer(System.out, format);
+//                serializer.serialize(document);
+//            } catch (Exception e) {
+//                e.printStackTrace();
+//            }
+//        }
+    
     }
 
     @Override
     public void close() {
-        
+
         super.close();
+
+        // Stop and deactivate composites
+        CompositeActivator compositeActivator = runtime.getCompositeActivator();
+        for (Composite composite : domainComposite.getIncludes()) {
+            try {
+                for (Component component : composite.getComponents()) {
+                    compositeActivator.stop(component);
+                }
+            } catch (ActivationException e) {
+                throw new ServiceRuntimeException(e);
+            }
+        }
+        for (Composite composite : domainComposite.getIncludes()) {
+            try {
+                compositeActivator.deactivate(composite);
+            } catch (ActivationException e) {
+                throw new ServiceRuntimeException(e);
+            }
+        }
 
         // Remove the contribution from the in-memory repository
         ContributionService contributionService = runtime.getContributionService();
         try {
-            contributionService.remove(location);
+            contributionService.remove(contribution.getURI());
         } catch (ContributionException e) {
             throw new ServiceRuntimeException(e);
-        }
-        
-        // Stop the SCA domain composite
-        CompositeActivator compositeActivator = runtime.getCompositeActivator();
-        try {
-            compositeActivator.stop(domainComposite);
-        } catch (ActivationException e) {
-            throw new ServiceRuntimeException(e);
-
         }
 
         // Stop the runtime
@@ -185,36 +273,71 @@ public class DefaultSCADomain extends SCADomain {
      * @return
      * @throws MalformedURLException
      */
-    private URL getContributionLocation(String contributionPath, String[] composites, ClassLoader classLoader)
+    private URL getContributionLocation(ClassLoader classLoader, String contributionPath, String[] composites)
         throws MalformedURLException {
-        URI contributionURI = URI.create(contributionPath);
-        if (contributionURI.isAbsolute() || composites.length == 0) {
-            return new URL(contributionPath);
+        if (contributionPath != null && contributionPath.length() > 0) {
+            //encode spaces as they would cause URISyntaxException
+            contributionPath = contributionPath.replace(" ", "%20");
+            URI contributionURI = URI.create(contributionPath);
+            if (contributionURI.isAbsolute() || composites.length == 0) {
+                return new URL(contributionPath);
+            }
         }
 
-        String compositePath = composites[0];
-        URL compositeURL = classLoader.getResource(compositePath);
-        if (compositeURL == null) {
-            throw new IllegalArgumentException("Composite not found: " + compositePath);
+        String contributionArtifactPath = null;
+        URL contributionArtifactURL = null;
+        if (composites != null && composites.length > 0 && composites[0].length() > 0) {
+
+            // Here the SCADomain was started with a reference to a composite file
+            contributionArtifactPath = composites[0];
+            contributionArtifactURL = classLoader.getResource(contributionArtifactPath);
+            if (contributionArtifactURL == null) {
+                throw new IllegalArgumentException("Composite not found: " + contributionArtifactPath);
+            }
+        } else {
+
+            // Here the SCADomain was started without any reference to a composite file
+            // We are going to look for an sca-contribution.xml or sca-contribution-generated.xml
+
+            // Look for META-INF/sca-contribution.xml
+            contributionArtifactPath = Contribution.SCA_CONTRIBUTION_META;
+            contributionArtifactURL = classLoader.getResource(contributionArtifactPath);
+
+            // Look for META-INF/sca-contribution-generated.xml
+            if (contributionArtifactURL == null) {
+                contributionArtifactPath = Contribution.SCA_CONTRIBUTION_GENERATED_META;
+                contributionArtifactURL = classLoader.getResource(contributionArtifactPath);
+            }
+
+            // Look for META-INF/sca-deployables directory
+            if (contributionArtifactURL == null) {
+                contributionArtifactPath = Contribution.SCA_CONTRIBUTION_DEPLOYABLES;
+                contributionArtifactURL = classLoader.getResource(contributionArtifactPath);
+            }
+        }
+
+        if (contributionArtifactURL == null) {
+            throw new IllegalArgumentException(
+                                               "Can't determine contribution deployables. Either specify a composite file, or use an sca-contribution.xml file to specify the deployables.");
         }
 
         URL contributionURL = null;
         // "jar:file://....../something.jar!/a/b/c/app.composite"
         try {
-            String scdlUrl = compositeURL.toExternalForm();
-            String protocol = compositeURL.getProtocol();
+            String url = contributionArtifactURL.toExternalForm();
+            String protocol = contributionArtifactURL.getProtocol();
             if ("file".equals(protocol)) {
                 // directory contribution
-                if (scdlUrl.endsWith(compositePath)) {
-                    String location = scdlUrl.substring(0, scdlUrl.lastIndexOf(compositePath));
+                if (url.endsWith(contributionArtifactPath)) {
+                    String location = url.substring(0, url.lastIndexOf(contributionArtifactPath));
                     // workaround from evil url/uri form maven
                     contributionURL = FileHelper.toFile(new URL(location)).toURI().toURL();
                 }
 
             } else if ("jar".equals(protocol)) {
                 // jar contribution
-                String location = scdlUrl.substring(4, scdlUrl.lastIndexOf("!/"));
-                // workaround from evil url/uri form maven
+                String location = url.substring(4, url.lastIndexOf("!/"));
+                // workaround for evil url/uri from maven
                 contributionURL = FileHelper.toFile(new URL(location)).toURI().toURL();
             }
         } catch (MalformedURLException mfe) {
@@ -226,8 +349,7 @@ public class DefaultSCADomain extends SCADomain {
 
     @Override
     public <B, R extends CallableReference<B>> R cast(B target) throws IllegalArgumentException {
-        // TODO Auto-generated method stub
-        return null;
+        return (R)runtime.getProxyFactory().cast(target);
     }
 
     @Override
@@ -237,6 +359,37 @@ public class DefaultSCADomain extends SCADomain {
             throw new ServiceRuntimeException("Service not found: " + serviceName);
         }
         return serviceReference.getService();
+    }
+
+    private <B> ServiceReference<B> createServiceReference(Class<B> businessInterface, String targetURI) {
+        try {
+            AssemblyFactory assemblyFactory = runtime.getAssemblyFactory();
+            Composite composite = assemblyFactory.createComposite();
+            composite.setName(new QName(Constants.SCA10_TUSCANY_NS, "default"));
+            RuntimeComponent component = (RuntimeComponent)assemblyFactory.createComponent();
+            component.setName("default");
+            component.setURI("default");
+            runtime.getCompositeActivator().configureComponentContext(component);
+            composite.getComponents().add(component);
+            RuntimeComponentReference reference = (RuntimeComponentReference)assemblyFactory.createComponentReference();
+            reference.setName("default");
+            ModelFactoryExtensionPoint factories =
+                runtime.getExtensionPointRegistry().getExtensionPoint(ModelFactoryExtensionPoint.class);
+            JavaInterfaceFactory javaInterfaceFactory = factories.getFactory(JavaInterfaceFactory.class);
+            InterfaceContract interfaceContract = javaInterfaceFactory.createJavaInterfaceContract();
+            interfaceContract.setInterface(javaInterfaceFactory.createJavaInterface(businessInterface));
+            reference.setInterfaceContract(interfaceContract);
+            component.getReferences().add(reference);
+            reference.setComponent(component);
+            SCABindingFactory scaBindingFactory = factories.getFactory(SCABindingFactory.class);
+            SCABinding binding = scaBindingFactory.createSCABinding();
+            binding.setURI(targetURI);
+            reference.getBindings().add(binding);
+            return new ServiceReferenceImpl<B>(businessInterface, component, reference, binding, runtime
+                .getProxyFactory(), runtime.getCompositeActivator());
+        } catch (Exception e) {
+            throw new ServiceRuntimeException(e);
+        }
     }
 
     @Override
@@ -258,53 +411,152 @@ public class DefaultSCADomain extends SCADomain {
         // Lookup the component in the domain
         Component component = components.get(componentName);
         if (component == null) {
-            throw new ServiceRuntimeException("Component not found: " + componentName);
+            // The component is not local in the partition, try to create a remote service ref
+            return createServiceReference(businessInterface, name);
         }
-        ComponentContext componentContext = null;
+        RuntimeComponentContext componentContext = null;
 
         // If the component is a composite, then we need to find the
-        // non-composite
-        // component that provides the requested service
+        // non-composite component that provides the requested service
         if (component.getImplementation() instanceof Composite) {
-            ComponentService promotedService = null;
             for (ComponentService componentService : component.getServices()) {
                 if (serviceName == null || serviceName.equals(componentService.getName())) {
-
                     CompositeService compositeService = (CompositeService)componentService.getService();
                     if (compositeService != null) {
-                        promotedService = compositeService.getPromotedService();
-                        SCABinding scaBinding = promotedService.getBinding(SCABinding.class);
-                        if (scaBinding != null) {
-                            Component promotedComponent = scaBinding.getComponent();
-                            if (serviceName != null) {
-                                serviceName = "$promoted$." + serviceName;
-                            }
-                            componentContext = (ComponentContext)promotedComponent;
+                        if (serviceName != null) {
+                            serviceName = "$promoted$." + serviceName;
                         }
+                        componentContext =
+                            ((RuntimeComponent)compositeService.getPromotedComponent()).getComponentContext();
+                        return componentContext.createSelfReference(businessInterface, compositeService
+                            .getPromotedService());
                     }
                     break;
                 }
             }
-            if (componentContext == null) {
-                throw new ServiceRuntimeException("Composite service not found: " + name);
+            // No matching service is found
+            throw new ServiceRuntimeException("Composite service not found: " + name);
+        } else {
+            componentContext = ((RuntimeComponent)component).getComponentContext();
+            if (serviceName != null) {
+                return componentContext.createSelfReference(businessInterface, serviceName);
+            } else {
+                return componentContext.createSelfReference(businessInterface);
             }
-        } else {
-            componentContext = (ComponentContext)component;
         }
-
-        ServiceReference<B> serviceReference;
-        if (serviceName != null) {
-            serviceReference = componentContext.createSelfReference(businessInterface, serviceName);
-        } else {
-            serviceReference = componentContext.createSelfReference(businessInterface);
-        }
-        return serviceReference;
 
     }
 
     @Override
     public String getURI() {
         return uri;
+    }
+
+    @Override
+    public ComponentManager getComponentManager() {
+        return componentManager;
+    }
+
+    public Set<String> getComponentNames() {
+        Set<String> componentNames = new HashSet<String>();
+        for (DeployedArtifact artifact : contribution.getArtifacts()) {
+            if (artifact.getModel() instanceof Composite) {
+                for (Component component : ((Composite)artifact.getModel()).getComponents()) {
+                    componentNames.add(component.getName());
+                }
+            }
+        }
+        return componentNames;
+    }
+
+    public Component getComponent(String componentName) {
+        for (DeployedArtifact artifact : contribution.getArtifacts()) {
+            if (artifact.getModel() instanceof Composite) {
+                for (Component component : ((Composite)artifact.getModel()).getComponents()) {
+                    if (component.getName().equals(componentName)) {
+                        return component;
+                    }
+                }
+            }
+        }
+        return null;
+    }
+
+    public void startComponent(String componentName) throws ActivationException {
+        Component component = getComponent(componentName);
+        if (component == null) {
+            throw new IllegalArgumentException("no component: " + componentName);
+        }
+        CompositeActivator compositeActivator = runtime.getCompositeActivator();
+        compositeActivator.start(component);
+    }
+
+    public void stopComponent(String componentName) throws ActivationException {
+        Component component = getComponent(componentName);
+        if (component == null) {
+            throw new IllegalArgumentException("no component: " + componentName);
+        }
+        CompositeActivator compositeActivator = runtime.getCompositeActivator();
+        compositeActivator.stop(component);
+    }
+}
+
+class DefaultSCADomainComponentManager implements ComponentManager {
+
+    protected DefaultSCADomain scaDomain;
+    protected List<ComponentListener> listeners = new CopyOnWriteArrayList<ComponentListener>();
+
+    public DefaultSCADomainComponentManager(DefaultSCADomain scaDomain) {
+        this.scaDomain = scaDomain;
+    }
+
+    public void addComponentListener(ComponentListener listener) {
+        this.listeners.add(listener);
+    }
+
+    public void removeComponentListener(ComponentListener listener) {
+        this.listeners.remove(listener);
+    }
+
+    public Set<String> getComponentNames() {
+        return scaDomain.getComponentNames();
+    }
+
+    public Component getComponent(String componentName) {
+        return scaDomain.getComponent(componentName);
+    }
+
+    public void startComponent(String componentName) throws ActivationException {
+        scaDomain.startComponent(componentName);
+    }
+
+    public void stopComponent(String componentName) throws ActivationException {
+        scaDomain.stopComponent(componentName);
+    }
+
+    public void notifyComponentStarted(String componentName) {
+        for (ComponentListener listener : listeners) {
+            try {
+                listener.componentStarted(componentName);
+            } catch (Exception e) {
+                e.printStackTrace(); // TODO: log
+            }
+        }
+    }
+
+    public void notifyComponentStopped(String componentName) {
+        for (ComponentListener listener : listeners) {
+            try {
+                listener.componentStopped(componentName);
+            } catch (Exception e) {
+                e.printStackTrace(); // TODO: log
+            }
+        }
+    }
+
+    public boolean isComponentStarted(String componentName) {
+        RuntimeComponentImpl runtimeComponent = (RuntimeComponentImpl)getComponent(componentName);
+        return runtimeComponent.isStarted();
     }
 
 }
